# ai-chat

./: .gitignore  README.md  prd-ai-chat.md  pyproject.toml  pytest.ini  requirements.txt
config/: models.toml
src/ai_chat/: __init__.py  main.py  source.py
src/ai_chat/config/: __init__.py  loader.py  models.py
src/ai_chat/contracts/: __init__.py  capture.py  context.py  source.py  types.py
src/ai_chat/providers/: __init__.py  base.py  bedrock.py  openai_compatible.py
src/ai_chat/services/: __init__.py  attachments.py  chat.py  document.py  knowledge.py  storage.py  storage_models.py
src/ai_chat/ui/: __init__.py  agent_selector.py  chat_display.py  chat_widget.py  conversation_sidebar.py  document_dialog.py  input_widget.py  main_window.py  model_selector.py  styles.py
src/ai_chat/utils/: __init__.py  clipboard.py  logging.py  markdown.py  reasoning.py
tests/: __init__.py  conftest.py  test_attachments.py  test_bedrock_provider.py  test_chat_integration.py  test_chat_service.py  test_clipboard.py  test_config.py  test_contracts.py  test_document.py  test_markdown.py  test_openai_provider.py  test_provider_factory.py  test_reasoning.py  test_source.py
tests/fixtures/: __init__.py  bedrock_responses.py  openai_responses.py
